--- a/package.json
+++ b/package.json
@@ -2,13 +2,42 @@
   "name": "fastify-ts-boilerplate",
   "version": "1.0.0",
   "description": "This is a boilerplate code to get started with fastify ts and jest",
-  "maintainers": [
-    "Hamza91able"
-  ],
+  "author": "Hamza91able",
+  "license": "ISC",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run build && node build/server.js",
+    "dev": "npx nodemon",
+    "create-db": "npx prisma migrate dev --name init",
+    "build": "rimraf ./build && tsc && cp .env ./build",
+    "test": "jest test --coverage",
+    "coverage": "jest --coverage"
   },
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "@fastify/autoload": "^5.7.1",
+    "@fastify/cors": "^8.3.0",
+    "@fastify/helmet": "^10.1.1",
+    "@fastify/sensible": "^5.2.0",
+    "@prisma/client": "^4.15.0",
+    "amqplib": "^0.10.3",
+    "dotenv": "^16.3.0",
+    "fastify": "^4.18.0",
+    "fastify-cli": "^5.7.1",
+    "fastify-plugin": "^4.5.0",
+    "joi": "^17.9.2",
+    "pino-pretty": "^10.0.0",
+    "redis": "^4.6.7",
+    "winston": "^3.9.0"
+  },
+  "devDependencies": {
+    "@types/amqplib": "^0.10.1",
+    "@types/node": "^20.3.1",
+    "jest": "^29.5.0",
+    "jest-mock-extended": "^3.0.4",
+    "rimraf": "^5.0.1",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3",
+    "nodemon": "^2.0.22"
+  }
 }
